<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:background="@color/white"
    android:scrollbars="none"
    android:id="@+id/main"
    tools:context=".ui.SignUp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_24sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_to_continue"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/_20ssp"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/_12sdp"/>

        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:src="@drawable/ic_icon"
            android:contentDescription="@string/app_name"
            android:layout_gravity="center_horizontal"
            />

        <EditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:drawableTint="@color/red"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:textCursorDrawable="@null"
            android:importantForAutofill="no"
            android:minHeight="48dp"
            android:textSize="@dimen/_15ssp"
            android:drawablePadding="@dimen/_8sdp"
            android:textColorHint="#808080"
            android:maxLength="30"
            android:paddingEnd="@dimen/_2sdp"
            android:paddingStart="@dimen/_2sdp"
            android:paddingBottom="@dimen/_8sdp" />

        <EditText
            android:id="@+id/passwordNumberET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:hint="@string/password"
            android:textColorHint="#808080"
            android:drawableTint="@color/red"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="@dimen/_6sdp"
            android:maxLength="12"
            android:textSize="@dimen/_15ssp"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:paddingEnd="@dimen/_2sdp"
            android:importantForAutofill="no"
            android:minHeight="48dp"
            android:textCursorDrawable="@null"
            android:paddingStart="@dimen/_2sdp"
            android:paddingBottom="@dimen/_8sdp" />

        <EditText
            android:id="@+id/confirmNumberPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:hint="@string/confirm_password"
            android:maxLength="12"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:textSize="@dimen/_15ssp"
            android:textCursorDrawable="@null"
            android:drawableTint="@color/red"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="@dimen/_6sdp"
            android:importantForAutofill="no"
            android:minHeight="48dp"
            android:paddingStart="@dimen/_2sdp"
            android:paddingEnd="@dimen/_2sdp"
            android:textColorHint="#808080"
            android:paddingBottom="@dimen/_8sdp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignUp"
            android:layout_width="@dimen/_100sdp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:elegantTextHeight="true"
            android:padding="@dimen/_14sdp"
            android:background="@drawable/et_bg"
            android:textColor="@color/white"
            android:backgroundTint="@color/red"
            android:layout_marginTop="@dimen/_22sdp"
            tools:ignore="HardcodedText" />


        <TextView
            android:id="@+id/alreadyHaveAcc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_acc"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_15sdp"
            android:padding="@dimen/_12sdp"
            android:textSize="@dimen/_13ssp"/>
    </LinearLayout>

</ScrollView>